Adicionando imagens e redes sociais em uma lista

--- a/index.html
+++ b/index.html
@@ -1,10 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <title>Willian Farias</title>
 </head>
 <body>
-  <p>Willian Farias</p>
+
+  <header>
+    <img src="/img/i.png" alt="Imagem que uso como foto de perfil">
+    <h1>Willian Farias</h1>
+  </header>
+
+  <p>
+    O que é o Lorem Ipsum?
+      O Lorem Ipsum é um texto modelo da indústria tipográfica e de impressão. O
+      Lorem Ipsum tem vindo a ser o texto padrão usado por estas indústrias 
+      desde o ano de 1500, quando uma misturou os caracteres de um texto para 
+      criar um espécime de livro. Este texto não só sobreviveu 5 séculos, mas 
+      também o salto para a tipografia electrónica, mantendo-se essencialmente 
+      inalterada. Foi popularizada nos anos 60 com a disponibilização das folhas
+      de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente 
+      com os programas de publicação como o Aldus PageMaker que incluem versões 
+      do Lorem Ipsum.
+      <a href="williansousafarias@gmail.com" target="_blank">williansousafarias
+        @gmail.com</a>
+      <a href="https://www.linkedin.com/in/willian-farias-56679ab2/">Linkedin</a>
+
+  </p>
+
+  <section>
+    <header>
+      <h2></h2>
+    </header>
+  </section>
+
+  <article>
+    <header>
+      <h3></h3>
+      <img src="/img/html.png" alt="Editor de texto mostrando código HTML">
+    </header>
+  </article>
+
+  <footer>
+    <ul>
+      <li><a href="https://www.instagram.com/williafarias/">Instagram</a></li>
+      <li><a href="https://www.linkedin.com/in/willian-farias-56679ab2/">Linkedi
+        n</a></li>
+    </ul>
+  </footer>
 </body>
 </html>
