aplicadando css nos h1, h2 e h3 e reestruturacao do projeto

--- a/public/main/index.html
+++ b/public/main/index.html
@@ -3,12 +3,13 @@
 <head>
   <meta charset="UTF-8">
   <title>Willian Farias</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <header>
-    <img src="/img/i.png" alt="Imagem que uso como foto de perfil">
-    <h1>Willian Farias</h1>
+    <img src="../img/i.png" alt="Imagem que uso como foto de perfil">
+    <h1 id="title">Willian Farias</h1>
   </header>
 
   <p>
@@ -22,30 +23,39 @@
       de Letraset, que continham passagens com Lorem Ipsum, e mais recentemente 
       com os programas de publicação como o Aldus PageMaker que incluem versões 
       do Lorem Ipsum.
-      <a href="williansousafarias@gmail.com" target="_blank">williansousafarias
-        @gmail.com</a>
+      <a href="mailto:williansousafarias@gmail.com" target="_blank">williansousa
+        farias@gmail.com</a>
       <a href="https://www.linkedin.com/in/willian-farias-56679ab2/">Linkedin</a>
 
   </p>
 
   <section>
     <header>
-      <h2></h2>
+      <h2 class="subtitle">Posts</h2>
     </header>
   </section>
 
   <article>
     <header>
-      <h3></h3>
-      <img src="/img/html.png" alt="Editor de texto mostrando código HTML">
+      <h3 class="post_title">Post #1</h3>
+      <img src="../img/html.png" alt="Editor de texto mostrando código HTML">
     </header>
   </article>
 
   <footer>
     <ul>
-      <li><a href="https://www.instagram.com/williafarias/">Instagram</a></li>
-      <li><a href="https://www.linkedin.com/in/willian-farias-56679ab2/">Linkedi
-        n</a></li>
+      <li>
+        <a href="mailto:williansousafarias@gmail.com" target="_blank">
+        williansousafarias
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/willian-farias-56679ab2/" 
+        target="_blank">Linkedin
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/WillianFarias" target="_blank">GitHub</a>
+      </li>
     </ul>
   </footer>
 </body>
